--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-google-maps/api": "^2.19.3",
+    "bcrypt": "^5.1.1",
     "mongoose": "^8.6.1",
     "next": "14.2.8",
     "react": "^18",
