--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "lucide-react": "^0.446.0",
     "mongoose": "^8.6.1",
     "next": "14.2.8",
+    "next-auth": "^4.24.8",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
