--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.3",
-    "@radix-ui/react-toast": "^1.2.2",
+    "@radix-ui/react-toast": "^1.2.6",
     "@react-google-maps/api": "^2.19.3",
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
@@ -35,6 +35,7 @@
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "react-leaflet": "^4.2.1",
+    "recharts": "^2.15.1",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7"
   },
