--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "mongoose": "^8.6.1",
     "next": "14.2.8",
     "next-auth": "^4.24.8",
+    "razorpay": "^2.9.6",
     "react": "^18",
     "react-day-picker": "^9.6.5",
     "react-dom": "^18",
