--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "cookie": "^0.6.0",
     "date-fns": "^2.30.0",
     "framer-motion": "^12.4.1",
+    "html2canvas": "^1.4.1",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
+    "jspdf": "^3.0.1",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.446.0",
     "mongoose": "^8.6.1",
