--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.446.0",
     "mongoose": "^8.6.1",
